fix: change scrollbar color to bg

--- a/n/web-client/src/App.css
+++ b/n/web-client/src/App.css
@@ -12,6 +12,30 @@
   background-color: rgb(250, 241, 218);
 }
 
+
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+/* Scrollbar handle (thumb) */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3); /* Color of the thumb */
+  border-radius: 10px; /* Rounded corners for the thumb */
+  border: 0px solid transparent; /* Padding around the thumb */
+  background-clip: content-box;
+}
+
+/* Scrollbar track */
+::-webkit-scrollbar-track {
+  background: rgb(250, 241, 218); /* Track color */
+  border-radius: 10px;
+}
+
+/* Scrollbar hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.5); /* Darker color on hover */
+}
+
 .table-header {
   text-shadow: 1px 0px 0px rgba(0, 0, 0, 1);
 }
